# Multilingual_factchecking

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
LLaMA-Factory/: =4.49.0
LLaMA-Factory/data/: dataset_info.json
LLaMA-Factory/examples/train_lora/ru22fact_train_config/training_with_llm/: gemma_lora_sft.yaml  gemma_lora_sft144.yaml  gemma_lora_sft26.yaml  llama_lora_sft.yaml  llama_lora_sft144.yaml  llama_lora_sft26.yaml  mistral_lora_sft.yaml  mistral_lora_sft144.yaml  mistral_lora_sft26.yaml
LLaMA-Factory/examples/train_lora/ru22fact_train_config/training_with_semantic_chunking/: gemma_lora_sft.yaml  gemma_lora_sft144.yaml  gemma_lora_sft26.yaml  llama_lora_sft.yaml  llama_lora_sft144.yaml  llama_lora_sft26.yaml  mistral_lora_sft.yaml  mistral_lora_sft144.yaml  mistral_lora_sft26.yaml
LLaMA-Factory/examples/train_lora/ru22fact_train_config/training_with_sentence_level_chunking/: gemma_lora_sft.yaml  gemma_lora_sft144.yaml  gemma_lora_sft26.yaml  (+6 more)
dataset/: Evidence_retreiver.py
dataset_preprocessing/: Evidence_retreiver.py  WebCrawling.py  formating_dataset.py  translate.py
docs/: mkdocs.yml
docs/docs/: index.md
inferencefile/: classification_report.py  prompting.py  test.py  test2.py  test_lang.py
multilingual_factchecking/: WebCrawling.py  __init__.py  dataset.py  features.py  plots.py
multilingual_factchecking/modeling/: predict.py  train.py
notebooks/: dataset_visualization.ipynb
utils/: check_missing_points.py  checking_duplicate_claims_similarity.py
utils/input/: missing_claims.jsonl  partial_missing_claims.jsonl
(+806 files in other folders)
